<resources>
    <string name="app_name">Ayurveda2</string>
    <string name="txt1">¿Qué es Ayurveda?</string>
    <string name="txt2">¿Para que sirve?</string>
    <string name="txt3">Los 7 chakras</string>
    <string name="txt4">Belleza</string>
    <string name="txt5">Nutrición</string>
    <string name="txt6">Salud</string>
    <string name="txt7">Inteligencia emocional</string>
    <string name="txt8">Sugerencias</string>
    <string name="txt9">BY</string>
    <string name="txt10">DILVSC</string>
    <string name="Logo"></string>
    <string name="hoja1imageView"></string>
    <string name="hoja2imageView11"></string>
    <string name="hoja3imageView8" />
    <string name="hoja4imageView10"></string>
    <string name="hoja5imageView3"></string>
    <string name="hoja6imageView7"></string>
    <string name="hoja7imageView9"></string>
    <string name="hoja8imageView6"></string>
    <string name="txt11">La palabra <b>Ayurveda</b> de origen sánscrito, se traduce como "Ayur = vida" y "Veda = conocimiento", quedando traducido como
    "conocimiento de la vida", y los principios de esta antigua sabiduría nos recuerdan que toda la red de la vida está intrincadamente entretejida.
        Con un énfasis único en el bienestar total, el arte y la ciencia <b>Ayurveda</b> trabajan para armonizar nuestro mundo interno y externo,
    creando una armonia entre ambos para conseguir una mejor calidad de vida.</string>
    <string name="fraseimageView"></string>
    <string name="fraseimageButton"></string>
    <string name="txt12">Tests</string>
    <string name="testimageButton0"></string>
    <string name="txt23">3. Ahora, ¿cómo está la temperatura de tu cuerpo?</string>
    <string name="radioButton7">3- Puedo manejar las temperaturas cálidas y frías, pero prefiero el clima cálido y seco.</string>
    <string name="radioButton8">2- Me sobrecaliento y sudo fácilmente. ¡No soporto el calor y la humedad extrema!</string>
    <string name="radioButton9">1- ¡Siempre estoy helado! Siempre tengo que llevar una manta y anhelar el calor.</string>
    <string name="txt24">4. ¿Cómo es tu digestión?</string>
    <string name="radioButton10">3- Lenta: tiendo a estar lleno por muchas horas después de una comida y con frecuencia me siento pesado o cansado después de comer.</string>
    <string name="radioButton11">2- Fuerte y aguda: generalmente puedo digerir cualquier cosa, pero a veces sufro de acidez estomacal e hiperacidez.</string>
    <string name="radioButton12">1- Irregular: a veces está bien y otras veces me siento extremadamente hinchado / gaseoso.</string>
    <string name="txt25">5. ¿Cómo están tus intestinos?</string>
    <string name="radioButton13">3- Bastante regular y suave. Suelo ir al despertar y más tarde durante el día.</string>
    <string name="radioButton14">2- Rápido: ¡tan pronto como ingiera alimentos, tengo que ir al baño! ¡Yo evacuo casi tres veces al día!</string>
    <string name="radioButton15">1- Seco y duro, una tendencia al estreñimiento. Evacuo una vez por día o incluso menos.</string>
    <string name="test2imageButton"></string>
    <string name="txt26">6. ¿Cómo son tus hábitos alimenticios?</string>
    <string name="radioButton16">3- No como con frecuencia, pero cuando lo hago, a menudo disfruto de dulces, carbohidratos, lácteos y otros alimentos que pueden no ser los mejores para mí. </string>
    <string name="radioButton17">2- Me gusta tener establecida las comidas para saber exactamente cuándo será la próxima. Necesito una comida buena y satisfactoria para poder funcionar.</string>
    <string name="radioButton18">1- Tiendo a comer cosas pequeñas todo el día cuando tengo hambre, sin una rutina establecida. A menudo como mientras estoy de pie y en el camino.</string>
    <string name="txt27">8. ¿Cómo duermes?</string>
    <string name="radioButton19">3- Pesado. ¡Siento que podría dormir para siempre! A menudo me levanto cansado y no hay nada que me guste más que una buena siesta.</string>
    <string name="radioButton20">2- Sólido. Duermo durante aproximadamente 6-7 horas por noche.</string>
    <string name="radioButton21">1- Ligero y disperso. A menudo tengo problemas para conciliar el sueño porque ¡tengo tantos pensamientos corriendo por mi mente! A veces estoy despierto toda la noche.</string>
    <string name="txt28">9. ¿Cómo es tu personalidad?</string>
    <string name="radioButton22">3- Tranquilo, cariñoso, atento, relajado, paciente.</string>
    <string name="radioButton23">2- Líder, orientado al logro, trabajador, organizado.</string>
    <string name="radioButton24">1- Creativo, idealista, artístico, excéntrico, entusiasta, fuera de lo común.</string>
    <string name="test3imageButton"></string>
    <string name="txtv1">  Nombre y Apellido</string>
    <string name="txtv2">  Correo Electronico</string>
    <string name="txtv3">  Asunto</string>
    <string name="txtmulti1"></string>
    <string name="button1">Enviar</string>
    <string name="txt29"></string>
    <string name="txt30">7. ¿Cómo es tu vida laboral?</string>
    <string name="radioButton25">1- Soy un creativo y multi-tarea. Soy mejor cuando tengo muchos proyectos diferentes para mantenerme entretenido. Soy mejor cuando estoy intercambiando ideas y tengo mucho tiempo por mi cuenta.</string>
    <string name="radioButton26">2- Soy todo un entusiasta. Pongo todo en mi trabajo y trazo constantemente estrategias para perfeccionarlo. Soy mejor en puestos de liderazgo y trabajando para lograr un objetivo de equipo compartido.</string>
    <string name="radioButton27">3- Soy muy paciente y me gusta trabajar uno a uno o con grupos pequeños de personas. También me gusta usar mis manos, como para cocinar o coser. Soy mejor cuando sé que estoy ayudando a alguien.</string>
    <string name="txt31">10. ¿Cómo reaccionas ante situaciones difíciles?</string>
    <string name="radioButton28">1. Tiendo a ponerme ansioso y preocupado. Es difícil para mí calmar mi mente.</string>
    <string name="radioButton29">2. Tiendo a enojarme e impacientarme. A veces pierdo los estribos y exploto.</string>
    <string name="radioButton30">3. Tiendo a reprimir mis emociones y me siento deprimido o solo, aunque no me gusta mostrarlo.</string>
    <string name="test4radioButton"></string>
    <string name="txt32">11. ¿Cómo es tu tipo de yoga favorito?</string>
    <string name="txt33">12. ¿Con qué animal te relacionas más?</string>
    <string name="radioButton31">3. Yin yoga. Me gusta relajarme y concentrarme en mi respiración.</string>
    <string name="radioButton32">2. Yoga Power o Ashtanga. ¡Me gusta la estructura y el esfuerzo!</string>
    <string name="radioButton33">1. ¡Flows creativos de vinyasa, donde las posturas se ponen divertidas! Me encanta la libertad de expresión en el movimiento.</string>
    <string name="radioButton34">3. Un pájaro: siempre volando a nuevas alturas, explorando un territorio desconocido y viendo el mundo desde arriba.</string>
    <string name="radioButton35">2. Un león feroz: valiente, poderoso y fuerte. Sabe exactamente lo que quiere.</string>
    <string name="radioButton36">1. Un pájaro: siempre volando a nuevas alturas, explorando un territorio desconocido y viendo el mundo desde arriba.</string>
    <string name="calcuarButton">Calcular</string>
    <string name="txtscore1"></string>
    <string name="txtscore2"></string>
    <string name="txtscore3"></string>
    <string name="txtscore4"></string>
    <string name="txtscore5"></string>
    <string name="txtscore6"></string>
    <string name="txtscore7"></string>
    <string name="txtscore8"></string>
    <string name="txtscore9"></string>
    <string name="txtscore10"></string>
    <string name="txtscore11"></string>
    <string name="txtscore12"></string>
    <string name="txtscore13"></string>
    <string name="txtscore14"></string>
    <string name="txtscore15"></string>
    <string name="txt34">DOSHA TEST</string>
    <string name="txt35">Somos una combinación de los tres Doshas; Vata (aire) Pitta (fuego) y Kapha (tierra) pero en cantidades variables. Con este test
    descubriras cual es tu Dosha principal y te permite conocer mejor la relacion entre tu cuerpo y tu mente.</string>
    <string name="txt36">1. ¿Cómo es tu tipo de cuerpo?</string>
    <string name="txt37">2. ¿Cómo es tu piel?</string>
    <string name="radioButton43">1- Huesos pequeños, delgado, sin músculo.</string>
    <string name="radioButton44">2- De complexión media, capaz de desarrollar músculo fácilmente.</string>
    <string name="radioButton45">3- Los huesos más grandes, con curvas, tienden a engordar fácilmente.</string>
    <string name="radioButton46">1- Seca y deshidratada-áspera en ciertas áreas.</string>
    <string name="radioButton47">2 -Grasa y sensible- acné y / o enrojecimiento cuando está desequilibrada.</string>
    <string name="radioButton48">3 -Húmeda y suave - zona T a veces grasosa. (La zona T = comprende frente, nariz, zona de nasos genianos y barbilla)</string>
    <string name="txt38">Mayormente Vata</string>
    <string name="txt39">RESULTADO2</string>
    <string name="txt40">RESULTADO3</string>
    <string name="edittxt1">Nombre</string>
    <string name="edittxt2">Correo Electronico</string>
    <string name="edittxt3">Contraseña</string>
    <string name="registrarbutton">Registrar</string>
    <string name="edittxt4">Correo electronico</string>
    <string name="edittxt5">Contraseña</string>
    <string name="iniciarSesion">Iniciar sesion</string>
    <string name="registrarButton2">Registrarse</string>
    <string name="txt41">¿Eres nuevo/a?</string>
    <string name="edittxt6">Apellidos</string>
    <string name="edittxt7">Repetir contraseña</string>
    <string name="edittxt8">Fecha nacimiento</string>
    <string name="edittxt9">Pais</string>
    <string name="radioButton49">Hombre</string>
    <string name="radioButton50">Mujer</string>
    <string name="SignInButton"></string>
    <string name="txt42">Nuestros cinco sentidos sirven como portales entre los planos internos y externos, mientras los cinco grandes elementos : <i>Éter, Aire, Fuego, Agua y Tierra</i> bailan la danza
    de la creación alrededor y dentro de nosotros. El <b>Ayurveda</b> agrupa estos cinco elementos en tres tipos básicos de energía y principios funcionales
    que están presentes en todos y en todo. Dado que no hay una sola palabra en español o en ingles para describir estos principios; se suele utilizar las
    palabras sánscritas <i>Vata, Pitta y Kappa</i> para describir sus combinaciones.</string>
    <string name="txtforo1">Normas</string>
    <string name="forotitulo1">Principal</string>
    <string name="txtforo2">Solicitudes de foro</string>
    <string name="txtforo3">Noticias</string>
    <string name="forotitulo2">Salud</string>
    <string name="txtforo5">Nutrición</string>
    <string name="txtforo6">Enfermedades</string>
    <string name="txtforo8">Inteligencia emocional</string>
    <string name="txtforo9">Medicina natural</string>
    <string name="forotitulo3">Belleza</string>
    <string name="txtforo10">Cosmetica</string>
    <string name="txtforo11">Cuidados del pelo</string>
    <string name="txtforo12">Cuidados faciales</string>
    <string name="txtforo13">Cuidados corporales</string>
    <string name="forotitulo4">Espriritualidad</string>
    <string name="txtforo14">Afirmaciones</string>
    <string name="txtforo15">Angeles y guias</string>
    <string name="txtforo16">Proyeccion astral</string>
    <string name="txtforo17">Aura y chakras</string>
    <string name="txtforo18">Piedras y gemas</string>
    <string name="txtforo19">Muerte y vida despues de la muerte</string>
    <string name="txtforo20">Sueños</string>
    <string name="txtforo21">Sanación/Limpiezas</string>
    <string name="txtforo22">Meditación</string>
</resources>