<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/texturahoja"
    tools:context=".MainActivity10">

    <TextView
        android:id="@+id/txtscore6"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="57dp"
        android:background="@drawable/fondo"
        android:hint="@string/txtscore6"
        app:layout_constraintEnd_toStartOf="@+id/testimageButton2"
        app:layout_constraintStart_toEndOf="@+id/txtscore5"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

    <TextView
        android:id="@+id/txt23"
        android:layout_width="338dp"
        android:layout_height="47dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/txt23"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="363dp"
        android:layout_height="148dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/txt24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt23">

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton9" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton8" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton7" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="152dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/txt24"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="363dp"
        android:layout_height="154dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/txt25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt24">

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton12" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton11" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton10" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="123dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/txt25"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="363dp"
        android:layout_height="148dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt25">

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton15" />

        <RadioButton
            android:id="@+id/radioButton14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton14" />

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton13" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/testimageButton2"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/iconoflecha"
        android:contentDescription="@string/test2imageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtscore4"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/fondo"
        android:hint="@string/txtscore4"
        app:layout_constraintEnd_toStartOf="@+id/txtscore5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

    <TextView
        android:id="@+id/txtscore5"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/fondo"
        android:hint="@string/txtscore5"
        app:layout_constraintEnd_toStartOf="@+id/txtscore6"
        app:layout_constraintStart_toEndOf="@+id/txtscore4"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

</androidx.constraintlayout.widget.ConstraintLayout>