<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texturahoja"
    tools:context=".MainActivity12">

    <TextView
        android:id="@+id/txt30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="224dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/txt27"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup8"
        android:layout_width="363dp"
        android:layout_height="175dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/txt28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt30">

        <RadioButton
            android:id="@+id/radioButton21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton21" />

        <RadioButton
            android:id="@+id/radioButton20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton20" />

        <RadioButton
            android:id="@+id/radioButton19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton19" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt28"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="125dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/txt28"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@id/radioGroup9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup8" />

    <RadioGroup
        android:id="@+id/radioGroup9"
        android:layout_width="363dp"
        android:layout_height="148dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/txt31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt28">

        <RadioButton
            android:id="@+id/radioButton24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton24" />

        <RadioButton
            android:id="@+id/radioButton23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton23" />

        <RadioButton
            android:id="@+id/radioButton22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton22" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt31"
        android:layout_width="341dp"
        android:layout_height="45dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/txt31"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup9" />

    <RadioGroup
        android:id="@+id/radioGroup10"
        android:layout_width="363dp"
        android:layout_height="148dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt31">

        <RadioButton
            android:id="@+id/radioButton28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton28" />

        <RadioButton
            android:id="@+id/radioButton29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton29" />

        <RadioButton
            android:id="@+id/radioButton30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton30" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/text4imageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/iconoflecha"
        android:contentDescription="@string/test4radioButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtscore10"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="11dp"
        android:text="@string/txtscore10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtscore11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup10" />

    <TextView
        android:id="@+id/txtscore11"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="11dp"
        android:text="@string/txtscore11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtscore12"
        app:layout_constraintStart_toEndOf="@+id/txtscore10"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup10" />

    <TextView
        android:id="@+id/txtscore12"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="11dp"
        android:text="@string/txtscore12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text4imageButton"
        app:layout_constraintStart_toEndOf="@+id/txtscore11"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup10" />
</androidx.constraintlayout.widget.ConstraintLayout>